@@ -22,7 +22,10 @@ import com.google.protobuf.ServiceException;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.fs.FileSystem;
+import org.apache.hadoop.fs.LocalDirAllocator;
 import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.fs.shell.PathData;
 import org.apache.hadoop.util.StringUtils;
 import org.apache.hadoop.yarn.service.CompositeService;
 import org.apache.hadoop.yarn.util.RackResolver;
@@ -115,6 +118,8 @@ public class TajoWorker extends CompositeService {
   private RpcConnectionPool connPool;
 
   private String[] cmdArgs;
+
+  private DeletionService deletionService;
 
   public TajoWorker() throws Exception {
     super(TajoWorker.class.getName());
@@ -225,6 +230,11 @@ public class TajoWorker extends CompositeService {
           webServer.start();
           httpPort = webServer.getPort();
           LOG.info("Worker info server started:" + httpPort);
+
+          deletionService = new DeletionService(getMountPath().size(), 0);
+          if(systemConf.getBoolVar(ConfVars.WORKER_TEMPORAL_DIR_CLEANUP)){
+            getWorkerContext().cleanupTemporalDirectories();
+          }
         } catch (IOException e) {
           LOG.error(e.getMessage(), e);
         }
@@ -291,6 +301,8 @@ public class TajoWorker extends CompositeService {
       } catch (Exception e) {
       }
     }
+
+    if(deletionService != null) deletionService.stop();
     super.stop();
     LOG.info("TajoWorker main thread exiting");
   }
@@ -338,6 +350,46 @@ public class TajoWorker extends CompositeService {
       stop();
       if(force) {
         System.exit(0);
+      }
+    }
+
+    protected void cleanup(String strPath) {
+      if(deletionService == null) return;
+
+      LocalDirAllocator lDirAllocator = new LocalDirAllocator(ConfVars.WORKER_TEMPORAL_DIR.varname);
+
+      try {
+        Iterable<Path> iter = lDirAllocator.getAllLocalPathsToRead(strPath, systemConf);
+        FileSystem localFS = FileSystem.getLocal(systemConf);
+        for (Path path : iter){
+          deletionService.delete(localFS.makeQualified(path));
+        }
+      } catch (IOException e) {
+        LOG.error(e.getMessage(), e);
+      }
+    }
+
+    protected void cleanupTemporalDirectories() {
+      if(deletionService == null) return;
+
+      LocalDirAllocator lDirAllocator = new LocalDirAllocator(ConfVars.WORKER_TEMPORAL_DIR.varname);
+
+      try {
+        Iterable<Path> iter = lDirAllocator.getAllLocalPathsToRead(".", systemConf);
+        FileSystem localFS = FileSystem.getLocal(systemConf);
+        for (Path path : iter){
+          PathData[] items = PathData.expandAsGlob(localFS.makeQualified(new Path(path, "*")).toString(), systemConf);
+
+          ArrayList<Path> paths = new ArrayList<Path>();
+          for (PathData pd : items){
+            paths.add(pd.path);
+          }
+          if(paths.size() == 0) continue;
+
+          deletionService.delete(null, paths.toArray(new Path[paths.size()]));
+        }
+      } catch (IOException e) {
+        LOG.error(e.getMessage(), e);
       }
     }
 
@@ -628,7 +680,7 @@ public class TajoWorker extends CompositeService {
     }
   }
 
-  public static List<File> getMountPath() throws Exception {
+  public static List<File> getMountPath() throws IOException {
     BufferedReader mountOutput = null;
     try {
       Process mountProcess = Runtime.getRuntime ().exec("mount");
@@ -646,7 +698,7 @@ public class TajoWorker extends CompositeService {
         mountPaths.add(new File(line.substring (indexStart + 4, indexEnd)));
       }
       return mountPaths;
-    } catch (Exception e) {
+    } catch (IOException e) {
       e.printStackTrace();
       throw e;
     } finally {
